--- a/3-PracticeSet/HappyBirthday/app/src/main/res/layout/activity_main.xml
+++ b/3-PracticeSet/HappyBirthday/app/src/main/res/layout/activity_main.xml
@@ -1,33 +1,47 @@
-<!--<?xml version="1.0" encoding="utf-8"?>-->
-<!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
+<!--
+Drawing to code in 3 steps:
+    1) Select the views (TextView, ImageView, EditText, Button)
+    2) Position the views (Relative or Linear layout, alignParent, ...)
+    3) Style the views
+-->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="16dp"
-    android:paddingRight="16dp"
-    android:paddingTop="16dp"
-    android:paddingBottom="16dp"
-    tools:context=".MainActivity">
-    <!--com.example.android.happybirthday-->
+    tools:context=".MainActivity"
+    tools:ignore="ContentDescription" >
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="centerCrop"
+        android:id="@+id/photo"
+        android:src="@drawable/android_party" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello, World!"
+        android:text="Happy birthday, Fulano!"
         android:textStyle="bold"
-        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
-        android:id="@+id/textView" />
+        android:textSize="36sp"
+        android:fontFamily="sans-serif-light"
+        android:textColor="@android:color/white"
+        android:paddingLeft="20dp"
+        android:paddingTop="20dp"
+        android:id="@+id/topText" />
 
-    <Button
-        android:id="@+id/button"
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/textView"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="67dp"
-        android:text="Button" />
-    <!--app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintLeft_toLeftOf="parent"
-    app:layout_constraintRight_toRightOf="parent"
-    app:layout_constraintTop_toTopOf="parent"-->
+        android:text="From Emiliano"
+        android:textStyle="bold"
+        android:textSize="36sp"
+        android:fontFamily="sans-serif-light"
+        android:id="@+id/bottomText"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:textColor="@android:color/white"
+        android:paddingBottom="20dp"
+        android:paddingRight="20dp"/>
+
 </RelativeLayout>
